deploy/k8s/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jovies-app
  labels:
    environment: production
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: jovies-app
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "200Mi"
              cpu: "150m"
